fix(css): arregla overlapeo de icon y salida del cuadro del texto con hyperlink

--- a/Statics/Css/indexGraph.css
+++ b/Statics/Css/indexGraph.css
@@ -17,7 +17,7 @@ main {
 /* ==== OBJECTS ==== */
 .welcomeContainer {
     width: 100%;
-    height: 30vh;
+    height: 20vh;
     font-size: 3vw;
     display: flex;
     flex-direction: column;
@@ -57,15 +57,14 @@ main {
 .loginForm{
 
     width: 70%;
-    max-height: 90%;
     background-color:#3165CD ;
     border-radius: 3%;
     padding: 15% 10%;
-    
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    font-size: 1vw;
     
 }
 
@@ -89,7 +88,7 @@ main {
     font-size: 3vw;
     text-align: center;
     text-transform: uppercase;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 
 .loginForm input {
