--- a/Statics/Css/signupGraph.css
+++ b/Statics/Css/signupGraph.css
@@ -52,18 +52,21 @@ main {
 }
 
 .avatarIcon {
-    width: 50%;
-    height: 10%;
+    width: 140px;
+    height: 150px;
     margin-bottom: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden; 
+    border-radius: 50%;
+    flex-shrink: 0;
 }
 
 .icon{
-    width: 80%;
-    height: 50%;
+    width: 100%;
+    height: 90%;
+    object-fit: cover; /* SIGUE DEFORMANDOSE AYUDAAAA */
 }
 
 .signupForm {
